[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/SuperSonic.gd" type="Script" id=1]
[ext_resource path="res://assets/super_sonic/Super Sonic (1).png" type="Texture" id=2]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/super_sonic_audio/super_sonic_transformation.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/RingCollection.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/RingCounter.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/super_sonic/Hyper Sonic.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 25, 30, 23, 33 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SuperSonicShape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 259, 357 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 266, 349 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitbox/HitboxShape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 272, 343 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RingCollection/RingCollectionShape:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SuperSonicShape:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("RingCollection/RingCollectionShape:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=19]
resource_name = "end"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 23, 354, 37, 34 ), Rect2( 82, 356, 37, 32 ), Rect2( 135, 356, 37, 34 ), Rect2( 189, 358, 37, 32 ), Rect2( 23, 413, 37, 34 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SuperSonicShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RingCollection/RingCollectionShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "flying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 23, 354, 37, 34 ), Rect2( 82, 356, 37, 32 ), Rect2( 135, 356, 37, 34 ), Rect2( 189, 358, 37, 32 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SuperSonicShape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 8 ), Vector2( -6, 8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox/HurtboxShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hitbox/HitboxShape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, -6 ), Vector2( 7, -6 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart_movement"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SuperSonicShape:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("RingCollection/RingCollectionShape:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=13]
resource_name = "hyper_sonic_flying"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 23, 354, 37, 34 ), Rect2( 82, 356, 37, 32 ), Rect2( 135, 356, 37, 34 ), Rect2( 189, 358, 37, 32 ), Rect2( 23, 413, 37, 34 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart_movement"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SuperSonicShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/HurtboxShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hitbox/HitboxShape:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RingCollection/RingCollectionShape:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "hyper_sonic_transformation"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 25, 30, 23, 33 ), Rect2( 60, 25, 29, 45 ), Rect2( 105, 25, 29, 47 ), Rect2( 154, 27, 28, 47 ), Rect2( 197, 27, 28, 48 ), Rect2( 246, 27, 28, 48 ), Rect2( 291, 27, 28, 47 ), Rect2( 334, 27, 28, 47 ), Rect2( 375, 26, 28, 48 ), Rect2( 417, 27, 28, 47 ), Rect2( 461, 26, 28, 48 ), Rect2( 30, 91, 28, 48 ), Rect2( 77, 90, 28, 47 ), Rect2( 124, 89, 28, 47 ), Rect2( 168, 88, 28, 48 ), Rect2( 215, 88, 28, 48 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/HurtboxShape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/HitboxShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, -6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RingCollection/RingCollectionShape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SuperSonicShape:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 8 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_movement_while_transforming"
}, {
"args": [  ],
"method": "restart_movement"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "transformation"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 25, 30, 23, 33 ), Rect2( 60, 25, 29, 45 ), Rect2( 105, 25, 29, 47 ), Rect2( 154, 27, 28, 47 ), Rect2( 197, 27, 28, 48 ), Rect2( 246, 27, 28, 48 ), Rect2( 291, 27, 28, 47 ), Rect2( 334, 27, 28, 47 ), Rect2( 375, 26, 28, 48 ), Rect2( 417, 27, 28, 47 ), Rect2( 461, 26, 28, 48 ), Rect2( 30, 91, 28, 48 ), Rect2( 77, 90, 28, 47 ), Rect2( 124, 89, 28, 47 ), Rect2( 168, 88, 28, 48 ), Rect2( 215, 88, 28, 48 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/HurtboxShape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/HitboxShape:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, -6 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RingCollection/RingCollectionShape:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SuperSonicShape:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 8 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_movement_while_transforming"
}, {
"args": [  ],
"method": "restart_movement"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "end"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "flying"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "hyper_sonic_flying"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "hyper_sonic_transformation"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "transformation"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=7]
states/end/node = SubResource( 20 )
states/end/position = Vector2( 1386.28, 202.147 )
states/flying/node = SubResource( 4 )
states/flying/position = Vector2( 730, 155 )
states/hyper_sonic_flying/node = SubResource( 15 )
states/hyper_sonic_flying/position = Vector2( 1103, 274.079 )
states/hyper_sonic_transformation/node = SubResource( 16 )
states/hyper_sonic_transformation/position = Vector2( 693, 274.079 )
states/transformation/node = SubResource( 5 )
states/transformation/position = Vector2( 259, 170 )
transitions = [ "transformation", "flying", SubResource( 6 ), "flying", "hyper_sonic_transformation", SubResource( 17 ), "hyper_sonic_transformation", "hyper_sonic_flying", SubResource( 18 ), "hyper_sonic_flying", "end", SubResource( 21 ) ]
start_node = "transformation"
end_node = "end"
graph_offset = Vector2( 432.278, 93.1466 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=8]

[sub_resource type="CapsuleShape2D" id=9]
height = 14.0

[sub_resource type="CircleShape2D" id=10]
radius = 18.0

[sub_resource type="CircleShape2D" id=11]
radius = 14.0

[sub_resource type="CircleShape2D" id=12]
radius = 24.0208

[node name="SuperSonic" type="KinematicBody2D"]
collision_layer = 131072
collision_mask = 8126464
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 25, 30, 23, 33 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/end = SubResource( 19 )
anims/flying = SubResource( 2 )
anims/hyper_sonic_flying = SubResource( 13 )
anims/hyper_sonic_transformation = SubResource( 14 )
anims/transformation = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 7 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 8 )

[node name="SuperSonicShape" type="CollisionShape2D" parent="."]
position = Vector2( 259, 357 )
rotation = -6.28319
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="HurtboxShape" parent="Hurtbox" index="0"]
position = Vector2( 266, 349 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 128
collision_mask = 16

[node name="HitboxShape" parent="Hitbox" index="0"]
position = Vector2( 272, 343 )
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -265, -348 )
offset = Vector2( 300, 350 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="Effects" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true
max_distance = 10000.0

[node name="RingCollection" parent="." instance=ExtResource( 6 )]
collision_layer = 256

[node name="RingCollectionShape" parent="RingCollection" index="0"]
position = Vector2( 2, 2 )
shape = SubResource( 12 )

[node name="RingCounter" parent="." instance=ExtResource( 7 )]
margin_left = -264.0
margin_top = -171.0
margin_right = -158.0
margin_bottom = -154.0
text = "Rings: 50"

[node name="LoseRingsTimer" type="Timer" parent="."]

[node name="FallingDownTimer" type="Timer" parent="."]
wait_time = 9.3

[connection signal="area_entered" from="RingCollection" to="." method="_on_RingCollection_area_entered"]
[connection signal="timeout" from="LoseRingsTimer" to="." method="_on_LoseRingsTimer_timeout"]
[connection signal="timeout" from="FallingDownTimer" to="." method="_on_FallingDownTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="RingCollection"]
